<resources>
    <string name="app_name">Tac</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="choose_username">Choose Username</string>
    <string name="username_notice">You can always change it later.</string>
    <string name="enter_gender_fullname">Provide Name, Password &amp; Gender</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="update_password">Update Password</string>
    <string name="email">Email</string>
    <string name="one_time_password">One Time Password</string>
    <string name="add_phone_notice">The phone number can be used for login and future password recovery.</string>
    <string name="next">Next</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="choose_profile_photo">Choose Profile Photo</string>
    <string name="skip">Skip</string>
    <string name="otp_resend_success">OTP sent successfully</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bio">Bio</string>
    <string name="mobile_number">Phone Number</string>
    <string name="country_code">+91</string>
    <string name="username_phone">Username or Phone</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="addressModels">Address</string>
    <string name="details">Details</string>
    <string name="otp_mobile">One Time Password (OTP) has been sent to %1$s</string>
    <string name="copyright">Wookes © %1$d</string>
    <string name="logging_dialog">Logging in&#8230;</string>
    <string name="signing_up_dialog">Signing up&#8230;</string>
    <string name="verifying_dialog">Verifying&#8230;</string>
    <string name="loading_dialog">Loading&#8230;</string>
    <string name="updating_dialog">Updating&#8230;</string>
    <string name="invalid_data_from_server">Can\'t connect right now</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="invalidaccount">No account exists with this username</string>
    <string name="invalidlogin">Invalid Username or Password.</string>
    <string name="network_error">Please! Check your internet connection</string>
    <string name="invalid_username">Invalid username or phone</string>
    <string name="invalid_phone">Enter a valid phone number</string>
    <string name="invalid_fullname">Name can only use letters and spaces.</string>
    <string name="invalid_fullname_length">Name must have 2 to 30 characters.</string>
    <string name="invalid_password_length">Password must be 5 to 16 characters long.</string>
    <string name="password_mismatch">Password and confirm password do not match.</string>
    <string name="one_time_password_will_sent">One Time Password (OTP) will be sent to your phone number</string>
    <string name="tac"></string>
    <string name="wookes">Wookes</string>
    <string name="about">About</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="terms_conditions">On clicking \'Verify\' you accept that, you have read and accept the &lt;a href="http://wookes.com/terms/">Terms &amp; Conditions&lt;/a> for the use of Wookes Tac.</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="following">Following</string>
    <string name="popular">Popular</string>
    <string name="create">Create</string>
    <string name="comments">comments</string>
    <string name="upgrading">Upgrading</string>
    <string name="upgrading_create_post">Wookes Tac is currently upgrading more features and will be updated soon as soon as possible.</string>
    <string name="upload">Upload</string>
    <string name="choose_video">Choose Video</string>
    <string name="storage_permissions">Please allow storage permission</string>
    <string name="video_duration_exceed">Please select video between 5 to 60 seconds</string>
    <string name="video_invalid_extension">Please select a mp4 video</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="caption_hint">Write a caption…</string>
    <string name="view_video_privacy">Who can view this video</string>
    <string name="allow_comments">Allow comments</string>
    <string name="allow_downloads">Allow downloads</string>
    <string name="view_video_privacy_public">Public</string>
    <string name="upload_progress">%1$d%%</string>
    <string name="error_uploading_file">An error occurred, while uploading video</string>
    <string name="post_upload_success">Post uploaded successfully</string>
    <string name="post_upload_failed">Post uploading failed</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="leave_comment">Leave a comment&#8230;</string>
    <string name="total_comments">%1$s comments</string>
    <string name="comment_reply_to">Reply to %1$s</string>
    <string name="copy">Copy</string>
    <string name="report">Report</string>
    <string name="delete">Delete</string>
    <string name="turn_off_comments">Turn off Comments</string>
    <string name="turn_on_comments">Turn on Comments</string>
    <string name="turn_off_downloads">Turn off Downloads</string>
    <string name="turn_on_downloads">Turn on Downloads</string>
    <string name="comments_turned_off">Comments Turned Off</string>
    <string name="comments_turned_on">Comments Turned On</string>
    <string name="downloads_turned_off">Downloads Turned Off</string>
    <string name="downloads_turned_on">Downloads Turned On</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="failed">Failed</string>
    <string name="edit">Edit</string>
    <string name="comment_copied">Comment copied</string>
    <string name="view_replies">View replies (%1$s)</string>
    <string name="hide_replies">Hide replies</string>
    <string name="posting">Posting&#8230;</string>
    <string name="comment_reply_user">\@%1$s\u0020</string>
    <string name="comment_reply_user_name">Replying to %1$s</string>
    <string name="profile_username">\@%1$s</string>
    <string name="followers">Followers</string>
    <string name="likes">Likes</string>
    <string name="no_videos_available">Whenever you upload a video, you will see it here</string>
    <string name="no_likes_available">Whenever you like a video, you will see it here</string>
    <string name="no_saved_available">Whenever you save a video, you will see it here</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="remove">Remove</string>
    <string name="post_deleted">Post Deleted</string>
    <string name="search">Search</string>
    <string name="hashtag_symbol">#</string>
    <string name="at_the_rate_symbol">\@</string>
    <string name="hashtag_name">#%1$s</string>
    <string name="hashtag_total_videos">%1$s videos</string>
    <string name="search_popular">Search Popular</string>
    <string name="search_accounts">Search Accounts</string>
    <string name="search_hashtag">Search Hashtags</string>
    <string name="no_search_result">No results found for \"%1$s\"</string>
    <string name="update">Update</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="bio_hint_counter">Bio (%1$d/100)</string>
    <string name="caption_counter">(%1$d/150)</string>
    <string name="profile_photo_update_failed">Profile Photo Update Failed</string>
    <string name="profile_photo_update_success">Profile Photo Updated Successfully</string>
    <string name="select_profile_photo">Select Profile Photo</string>
    <string name="following_tab">Following (%1$s)</string>
    <string name="followers_tab">Followers (%1$s)</string>
    <string name="settings">Settings</string>
    <string name="privacy_and_safety">Privacy and Safety</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="community_guidelines">Community Guidelines</string>
    <string name="logout">Log Out</string>
    <string name="password_update_success">Password Updated</string>
    <string name="share_to">Share to</string>
    <string name="messenger">Messenger</string>
    <string name="app_not_installed">App not installed</string>
    <string name="link_copied">Link copied</string>
    <string name="go_to_settings_enable_permission">Go to settings and enable permissions</string>
    <string name="all">All</string>
    <string name="filter_notifications">Filter Notifications</string>
    <string name="notification_tags">%1$s</string>
    <string name="no_notifications">Nothing in Notifications</string>
    <string name="post_path_creation_failed">Post path creation failed</string>
    <string name="got_it">Got it</string>
    <string name="intro_caption_one">Every moment is a fresh beginning, capture it.</string>
    <string name="intro_caption_two">A choice of your creation</string>
    <string name="intro_caption_three">Just stay tune for more fun</string>
    <string name="authorization_failed">Authorization Failed</string>
    <string name="tap_again_to_exit">Tap again to exit</string>
    <string name="already_publishing_post">Already publishing post</string>
    <string name="original_sound">original sound - %1$s - %2$s</string>
    <string name="original_sound_name">original sound - %1$s</string>
    <string name="use_this_sound">Use this sound</string>
    <string name="loading_sound">Loading...</string>
    <string name="no_comments">No comments</string>
    <string name="comments_disabled">Comments are turned off</string>
    <string name="first_comment">Be the first to comment!</string>
    <string name="content_and_activity">Content &amp; Activity</string>
    <string name="creator">Creator</string>
    <string name="balance">Balance</string>
    <string name="account">Account</string>
</resources>
