<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.wookes.tac.custom.CenteredToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:background="@color/colorTransparentWhite"
        android:foregroundGravity="center"
        android:gravity="center"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:theme="@style/BlackNavigation"
        app:title="@string/settings" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_15"
                android:text="@string/account"
                android:textAllCaps="true"
                android:textColor="@color/fadeGray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/creator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/icon_right_arrow"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="@dimen/margin_15"
                android:text="@string/creator"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/icon_right_arrow"
                android:focusable="true"
                android:padding="@dimen/margin_15"
                android:text="@string/balance"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_15"
                android:text="@string/content_and_activity"
                android:textAllCaps="true"
                android:textColor="@color/fadeGray"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_15"
                android:text="@string/privacy_and_safety"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/terms_of_use"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_15"
                android:text="@string/terms_of_use"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_15"
                android:text="@string/privacy_policy"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/community_guidelines"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_15"
                android:text="@string/community_guidelines"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/log_out"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_15"
                android:text="@string/logout"
                android:textColor="@android:color/holo_red_light"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>