<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/margin_15"
        android:text="@string/save"
        android:textColor="@color/colorBlack"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/margin_15"
        android:text="@string/delete"
        android:textColor="@color/colorBlack"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/margin_15"
        android:text="@string/report"
        android:textColor="@color/colorBlack"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/turn_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/margin_15"
        android:text="@string/turn_off_comments"
        android:textColor="@color/colorBlack"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/turn_downloads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/margin_15"
        android:text="@string/turn_off_downloads"
        android:textColor="@color/colorBlack"
        android:textSize="12sp" />

</LinearLayout>