<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparentWhite"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:theme="@style/BlackNavigation">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/upgrading"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/wooker_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="@dimen/margin_40"
        android:paddingBottom="@dimen/margin_40">

        <ImageView
            android:id="@+id/wooker_splash_logo"
            android:layout_width="@dimen/margin_70"
            android:layout_height="@dimen/margin_70"
            android:contentDescription="@string/about"
            app:srcCompat="@drawable/wookes_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_18"
            android:layout_toEndOf="@+id/wooker_splash_logo"
            android:text="@string/tac"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/textsize_20" />

    </RelativeLayout>

    <TextView
        android:id="@+id/upgrading_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wooker_logo"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin_20"
        android:lineSpacingExtra="4sp"
        android:text="@string/upgrading_create_post"
        android:textColor="@color/fadeGray"
        android:textSize="12sp" />

</RelativeLayout>