<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:background="@drawable/custom_shadow"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:paddingTop="@dimen/margin_40">

                <ImageView
                    android:id="@+id/wooker_splash_logo"
                    android:layout_width="@dimen/margin_70"
                    android:layout_height="@dimen/margin_70"
                    android:contentDescription="@string/about"
                    app:srcCompat="@drawable/wookes_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_18"
                    android:layout_toEndOf="@+id/wooker_splash_logo"
                    android:text="@string/tac"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/textsize_20" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:gravity="center"
                android:text="@string/enter_gender_fullname"
                android:textColor="@color/colorBlackText"
                android:textSize="@dimen/textsize_20" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:gravity="center"
                android:text="@string/username_notice"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/textsize_12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_13"
                android:layout_marginRight="@dimen/margin_10"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_fullname_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorGrey">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/full_name"
                        android:importantForAutofill="no"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/textsize_14" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_password_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorGrey"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/textsize_14" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_auth_failed_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_20"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/textsize_12"
                    android:visibility="gone" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_30"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:gravity="center"
                    android:padding="@dimen/margin_10"
                    android:text="@string/male"
                    android:textColor="@color/radio_flat_text_selector" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:padding="@dimen/margin_10"
                    android:text="@string/female"
                    android:textColor="@color/radio_flat_text_selector" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_30"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_14"
                android:typeface="sans" />
        </LinearLayout>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_5"
            android:padding="@dimen/margin_5"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/textsize_10" />
    </RelativeLayout>
</ScrollView>